--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,71 @@
-.App {
-  text-align: center;
+.main{
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(248, 246, 242);
+  
+}
+.navbar-main{
+  position: fixed;
+  height: 70px;
+  width: 100vw;
+  background-color: #243342;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.display-main{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+
+}
+
+.layout-main{
+  overflow-y: auto;
+  margin-top: 100px;
+  width: calc(100vw - 250px);
+  margin-left: 250px;
+  /* border: 1px solid black; */
+}
+
+
+.sidebar{
+  margin-top: 70px;
+  position: fixed;
+  height: calc(100vh - 70px);
+  width: 250px;
+  background-color: #2F4050;
+}
+
+.sidebar-list{
+  margin-top: 5vh;
+  height: auto;
+  padding: 0;
+  width: 100%;
+}
+
+.sidebar-list .sidebar-row{
+  width: 100%;
+  height: 60px;
+  list-style-type: none;
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  color: white;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.sidebar-list .sidebar-row:hover{
+  cursor: pointer;
+  background-color: #293846;
+}
+.sidebar-row .sidebar-icon{
+  flex: 30%;
+  display: grid;
+  place-items: center;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sidebar-row .sidebar-title{
+  flex: 70%;
+  color: white;
+  text-decoration: none;
 }
